src/test/data/highlighting/macro_annotations.tz
parameter string;
storage unit;
code
  {
    # unsupported annotations for CDAR
    CAR <error descr="Unexpected type annotation">:t</error> ;
    CDR <error descr="Unexpected type annotation">:t</error> ;
    CDAR <error descr="Unexpected type annotation">:t</error> ;
    CDAR <error descr="Unexpected type annotation">:t</error> <error descr="Unexpected type annotation">:t</error> ;
    CDAR @a <error descr="Unexpected variable annotation">@b</error> %a <error descr="Unexpected field annotation">%b</error> ;
    CAR <error descr="Unexpected code block">{}</error> ;
    CAR <error descr="Unexpected code block">{}</error> <error descr="Unexpected code block">{}</error> ;
    CDR <error descr="Unexpected code block">{}</error> ;
    CDAR <error descr="Unexpected code block">{}</error> ;
    CAAR <error descr="Unexpected code block">{}</error> ;

    # unsupported annotations for SET_CDAR
    SET_CAR <error descr="Unexpected type annotation">:t</error> ;
    SET_CDR <error descr="Unexpected type annotation">:t</error> ;
    SET_CDAR <error descr="Unexpected type annotation">:t</error> ;
    SET_CDAR <error descr="Unexpected type annotation">:t</error> <error descr="Unexpected type annotation">:t</error> ;
    SET_CDAR @a <error descr="Unexpected variable annotation">@b</error> %a <error descr="Unexpected field annotation">%b</error> ;
    SET_CAR <error descr="Unexpected code block">{}</error> ;
    SET_CAR <error descr="Unexpected code block">{}</error> <error descr="Unexpected code block">{}</error> ;
    SET_CDR <error descr="Unexpected code block">{}</error> ;
    SET_CDAR <error descr="Unexpected code block">{}</error> ;
    SET_CAAR <error descr="Unexpected code block">{}</error> ;

    # unsupported annotations for MAP_CDAR
    MAP_CAR <error descr="Unexpected type annotation">:t</error> {} ;
    MAP_CDR <error descr="Unexpected type annotation">:t</error> {} ;
    MAP_CDAR <error descr="Unexpected type annotation">:t</error> {} ;
    MAP_CDAR <error descr="Unexpected type annotation">:t</error> <error descr="Unexpected type annotation">:t</error> {} ;
    MAP_CDAR @a <error descr="Unexpected variable annotation">@b</error> %a <error descr="Unexpected field annotation">%b</error> {} ;
    <error descr="Expected one block.">MAP_CAR</error> ;
    MAP_CAR {} <error descr="Unexpected code block">{}</error> ;
    MAP_CAR @a %b {} <error descr="Unexpected code block">{}</error> ;

    # Unsupported annotations to DIP and DUP and/r unsupported blocks
    <error descr="One block expected">DIP</error> ;
    <error descr="One block expected">DIP</error> <error descr="Unexpected annotation">:a</error> ;
    DIP <error descr="Unexpected annotation">:a</error> {};
    <error descr="One block expected">DIP</error> <error descr="Unexpected annotation">@a</error> ;
    <error descr="One block expected">DIP</error> <error descr="Unexpected annotation">%a</error> ;
    <error descr="One block expected">DIP</error> <error descr="Unexpected annotation">:a</error> <error descr="Unexpected annotation">@a</error> <error descr="Unexpected annotation">%a</error> ;
    DIP <error descr="Unexpected annotation">:a</error> <error descr="Unexpected annotation">@a</error> <error descr="Unexpected annotation">%a</error> {} ;
    <error descr="One block expected">DIP</error> {} {} ;
    <error descr="Expected one block.">DIIIP</error> ;
    DIIIP {} <error descr="Unexpected code block">{}</error> ;
    <error descr="Expected one block.">DIIIP</error> <error descr="Unexpected type annotation">:a</error> ;
    <error descr="Expected one block.">DIIIP</error> <error descr="Unexpected variable annotation">@a</error> ;
    <error descr="Expected one block.">DIIIP</error> <error descr="Unexpected field annotation">%a</error> ;
    <error descr="Expected one block.">DIIIP</error> <error descr="Unexpected type annotation">:a</error> <error descr="Unexpected variable annotation">@a</error> <error descr="Unexpected field annotation">%a</error> ;
    DIIIP <error descr="Unexpected type annotation">:a</error> <error descr="Unexpected variable annotation">@a</error> <error descr="Unexpected field annotation">%a</error> {} ;

    <error descr="DUP doesn't support arguments">DUP</error> {} ;
    DUP <error descr="Unsupported annotation">:a</error> ;
    DUP <error descr="Unsupported annotation">%a</error> ;
    DUP @a <error descr="Only one variable annotation supported">@b</error> ;
    DUUUP <error descr="Unexpected code block">{}</error> ;
    DUUUP <error descr="Unexpected type annotation">:a</error> ;
    DUUUP <error descr="Unexpected field annotation">%a</error> ;
    DUUUP @a <error descr="Unexpected variable annotation">@b</error> ;

    # Unsupported blocks
    PAIR <error descr="Unexpected code block">{}</error> ;
    PAIR :t <error descr="Unexpected code block">{}</error> ;
    PAIR <error descr="Unexpected code block">{}</error> ;
    PAIR :t <error descr="Unexpected code block">{}</error> <error descr="Unexpected code block">{}</error> ;

    UNPAIR <error descr="Unexpected code block">{}</error> ;
    UNPAIR <error descr="Unexpected code block">{}</error> <error descr="Unexpected code block">{}</error> ;

    # Incorrectly built dynamic macros
    PAI<error descr="Unexpected 'I'">IR</error> ;
    PA<error descr="Left leaf 'A' used where right leaf 'I' or 'P' was expected">AIIR</error> ;
    PP<error descr="Missing left leaf 'A'">R</error> ;
    PPAI<error descr="Missing right leaf 'I'">R</error> ;
    PAIP<error descr="Missing left leaf 'A'">R</error> ;

    UN<error descr="Missing right leaf 'I'">PAR</error> ;
    UN<error descr="Left leaf 'A' used where right leaf 'I' or 'P' was expected">PAAR</error> ;
    U<error descr="Right leaf 'I' used where left leaf 'A' or 'P' was expected">NPIR</error> ;
    U<error descr="Right leaf 'I' used where left leaf 'A' or 'P' was expected">NPIIR</error> ;
    UN<error descr="Missing left leaf 'A'">PPR</error> ;
    UNP<error descr="Missing left leaf 'A'">PPR</error> ;
    UNPPP<error descr="Missing right leaf 'I'">AIR</error> ;

    # invalid number of annotations
    PAIR :a <error descr="Unexpected type annotation">:b</error>;
    PAIR :a %a %b <error descr="Unexpected field annotation">%c</error>;
    PAPAIR :a %a %b %c <error descr="Unexpected field annotation">%d</error>;

    UNPAIR @a @b <error descr="Unexpected variable annotation">@c</error> ;
    UNPAIR %a %b <error descr="Unexpected field annotation">%c</error>;
    UNPAPAIR <error descr="Unexpected type annotation">:a</error> <error descr="Unexpected type annotation">:b</error> ;
    UNPAPAIR <error descr="Unexpected type annotation">:a</error> <error descr="Unexpected type annotation">:b</error> %a %b %c <error descr="Unexpected field annotation">%d</error>;
    UNPAPAIR <error descr="Unexpected type annotation">:a</error> <error descr="Unexpected type annotation">:b</error> <error descr="Unexpected type annotation">:c</error> %a %b %c <error descr="Unexpected field annotation">%d</error> @a @b @c <error descr="Unexpected variable annotation">@d</error> ;

    # valid annotations for CDAR
    CAR ;
    CDR ;
    CDAR ;
    CDAR @a ;
    CDAR %a ;
    CDAR @a %a ;

    # valid SET_CDAR
    SET_CAR ;
    SET_CAR @a ;
    SET_CAR %a ;
    SET_CAR %a @a ;
    SET_CDR ;
    SET_CDR @a ;
    SET_CDR %a ;
    SET_CDR %a @a ;
    SET_CDAR ;
    SET_CDAR @a ;
    SET_CDAR %a ;
    SET_CDAR %a @a ;

    # valid MAP_CDAR
    MAP_CAR {} ;
    MAP_CAR @a {} ;
    MAP_CAR %a {} ;
    MAP_CAR %a @a {} ;
    MAP_CDR {} ;
    MAP_CDR @a {} ;
    MAP_CDR %a {} ;
    MAP_CDR %a @a {} ;
    MAP_CDAR {} ;
    MAP_CDAR @a {} ;
    MAP_CDAR %a {} ;
    MAP_CDAR %a @a {} ;

    # valid
    DIP {};
    DIIP {};
    DIIIIIP {};

    DUP ;
    DUUP ;
    DUUUP ;
    DUP @a ;

    PAIR;
    PAIR @a ;
    PAIR :a ;
    PAIR @a :a ;
    PAIR :a @a ;
    PAPAIR ;
    PAPAIR :a ;
    PAPAIR :a %a %b %c;

    UNPAIR ;
    UNPAIR @a @b ;
    UNPAIR %a ;
    UNPAIR %a @a ;
    UNPAIR @a %a ;
    UNPAPAIR ;
    UNPAPAIR %a %b %c;
    UNPAPAIR %a %b %c @a @b @c;
  };
